--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Fun Bus Travel Agency - Solution</title>
 
@@ -17,9 +18,19 @@
 <body>
 
   
-     
+  <header>
+    <div class="logo">
+      <img src="/img/fun-bus.jpg" alt="idk stuff">
+    </div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>   
   <div class="container home">
-   
+
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
