Added css for Header + nav in navigation.less

--- a/index.html
+++ b/index.html
@@ -19,17 +19,24 @@
 
   
   <header>
-    <div class="logo">
-      <img src="/img/fun-bus.jpg" alt="idk stuff">
+    <div class="navigation-container">
+      <div class="logo">
+        <h1>Fun Bus</h1>
+      </div>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+      </nav>
     </div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About Us</a>
-      <a href="#">Blog</a>
-      <a href="#">Contact</a>
-    </nav>
   </header>   
   <div class="container home">
+    <section class="intro">
+      <div class="hero-image">
+        <img src="img/fun-bus.jpg" alt="picture of a toy bus on a beach">
+      </div>
+    </section>
 
     <section class="content-section">
       <div class="text-content">
