added into header and styled in home-page.less

--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
       </nav>
     </div>
   </header>   
+
   <div class="container home">
     <section class="intro">
       <div class="hero-image">
         <img src="img/fun-bus.jpg" alt="picture of a toy bus on a beach">
       </div>
+      <h1>Welcome To the Fun Bus</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque nam illum saepe mollitia temporibus eius, totam perferendis? Voluptates expedita ab nulla quia, error in aut suscipit tempore consequatur consequuntur ad.</p>
     </section>
 
     <section class="content-section">
