--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="hero-image">
         <img src="img/fun-bus.jpg" alt="picture of a toy bus on a beach">
       </div>
-      <h1>Welcome To the Fun Bus</h1>
+      <h1>Welcome To the Fun Bus!</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque nam illum saepe mollitia temporibus eius, totam perferendis? Voluptates expedita ab nulla quia, error in aut suscipit tempore consequatur consequuntur ad.</p>
     </section>
 
